<resources>
    <string name="app_name">Calculator</string>
    <string name="clear_name">C</string>
    <string name="plus_minus_name">+-</string>
    <string name="percent_name">%</string>
    <string name="div_name">/</string>
    <string name="seven_name">7</string>
    <string name="eight_name">8</string>
    <string name="nine_name">9</string>
    <string name="mult_name">x</string>
    <string name="four_name">4</string>
    <string name="five_name">5</string>
    <string name="six_name">6</string>
    <string name="minus_name">-</string>
    <string name="one_name">1</string>
    <string name="two_name">2</string>
    <string name="three_name">3</string>
    <string name="plus_name">+</string>
    <string name="zero_name">0</string>
    <string name="decimal_name">.</string>
    <string name="equal_name">=</string>
</resources>